--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,13 @@
     "@headlessui/react": "^2.2.7",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
+    "@types/leaflet": "^1.9.20",
     "@types/three": "^0.179.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.541.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
