--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,9 @@
     "react-router-dom": "^6.26.1",
     "tailwind-merge": "^3.3.1",
     "three": "^0.158.0",
-    "three-mesh-bvh": "^0.8.0"
+    "three-mesh-bvh": "^0.8.0",
+    "@react-three/postprocessing": "^2.16.1",
+    "postprocessing": "^6.35.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
